# RABI

./: README.md
src/rbibm/: .gitignore  README.md  TODO.md  setup.cfg  setup.py
src/rbibm/config/: README.md  config.yaml
src/rbibm/config/defense/: empirical_fisher_trace.yaml  fisher_trace.yaml  l1noiseAdvTrain.yaml  l1noiseTrades.yaml  l1pgdTrades.yaml  l2noiseAdvTrain.yaml  l2pgdAdvTrain.yaml  l2pgdTargetedAdvTrain.yaml  l2pgdTrades_rKL.yaml  linfnoiseAdvTrain.yaml  linfnoiseTrades.yaml  sir.yaml
src/rbibm/config/eval_approx/: all.yaml  without_ground_truth.yaml
src/rbibm/config/eval_rob/: targeted_perm.yaml  targeted_theta.yaml
src/rbibm/config/eval_true/: mcmc.yaml
src/rbibm/config/experiment/: appendix_vae.yaml  appendix_vae1.yaml  appendix_vae2.yaml  appendix_vae3.yaml  eval_l2.yaml  eval_l2_mmd.yaml  eval_l2_nll.yaml  eval_l2_pyloric.yaml  eval_true.yaml  sweep_gl.yaml  sweep_gl_test.yaml  sweep_hh.yaml  sweep_lv.yaml  sweep_sir.yaml  sweep_spatial_sir.yaml  sweep_vae.yaml  train_ensembles_large.yaml  train_ensembles_lv.yaml  train_ensembles_small.yaml  train_hh_flows_fim.yaml  train_hh_others_fim.yaml  train_large_flows.yaml  train_large_flows_adversarial.yaml  train_large_flows_noise.yaml  train_large_flows_trades.yaml  train_large_others.yaml  train_large_others_adversarial.yaml  train_large_others_trades.yaml  train_pyloric.yaml  train_pyloric_fisher.yaml  (+13 more)
src/rbibm/scripts/: swep_attack_with_mc_irs.sh  swep_attack_with_mc_pgd.sh  swep_attack_without_mc_irs.sh  swep_defense_adv_train_advanced.sh  swep_defense_fisher.sh  swep_defense_fisher_ema.sh  swep_defense_fisher_ema_simple.sh  swep_defense_fisher_ema_simple_gl2.sh  swep_defense_fisher_ema_simple_with_embedding.sh  swep_defense_trades.sh  swep_defense_trades_advanced.sh
src/rbibm/tests/: conftest.py  test_metrics.py  test_run_train.py  test_tasks.py
src/v1/rbi/: .coveragec  README.md  setup.cfg  setup.py
(+392 files in other folders)
