[metadata]
name = rbibm
version = 0.1.0.dev
author = Manuel Gloeckler
author_email = manuel.gloeckler@student.uni-tuebingen.de
summary = Benchmark scripts for robustness of amortized Bayesian inference
license = LICENSE
description_file = README.md


[tool:pytest]
pep8maxlinelength = 88
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    gpu: marks tests that require a gpu (deselect with '-m "not gpu"')
addopts =
    --cov rbibm --cov-config .coveragerc --cov-report term-missing
    --verbose

[options]
install_requires =
    rbi
    sbi
    matplotlib
    seaborn
    hydra-core
    hydra-submitit-launcher
    hydra-optuna-sweeper
    torch
    torchvision
    torchdiffeq
    pandas
packages=
    rbibm

[options.entry_points]
# Add here console scripts like:
console_scripts =
    rbibm = rbibm.scripts.base_script:main
   


[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py