[metadata]
description_file = README.md

[tool:pytest]
pep8maxlinelength = 88
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    gpu: marks tests that require a gpu (deselect with '-m "not gpu"')
addopts =
    --cov rbi --cov-config .coveragerc --cov-report term-missing
    --verbose

[flake8]
max_line_length = 88
exclude = docs, build, dist, .ipynb_checkpoints

[isort]
line_length = 88
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
skip_glob=.ipynb_checkpoints
known_first_party=sbi,tests
known_third_party=matplotlib,numpy,pandas,pytest,pyknos,scipy,setuptools,six,sklearn,torch,tqdm,typeguard,yaml
multi_line_output=3